crates/shipper-levels/src/snapshots/shipper_levels__snapshot_tests__snapshot_cycle_fallback.snap
---
source: crates/shipper-levels/src/lib.rs
expression: level_summary(&levels)
---
- - 0
  - - a
- - 1
  - - b
- - 2
  - - c
