crates/shipper-levels/src/snapshots/shipper_levels__snapshot_tests__snapshot_diamond_dependency.snap
---
source: crates/shipper-levels/src/lib.rs
expression: level_summary(&levels)
---
- - 0
  - - root
- - 1
  - - left
    - right
- - 2
  - - leaf
