crates/shipper-levels/src/snapshots/shipper_levels__snapshot_tests__snapshot_double_diamond.snap
---
source: crates/shipper-levels/src/lib.rs
expression: level_summary(&levels)
---
- - 0
  - - a
- - 1
  - - b
    - c
- - 2
  - - d
- - 3
  - - e
    - f
- - 4
  - - g
